k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airline-app
  labels:
    name: airline-app
    app: airline-management
